Fix heart beat frequency kypes